# DhmServer

./: .gitignore  DhmServer.sln  README.md  codes.txt  command_list.py
3DPoliCompiler/: dhmHolo.py  dhmInit.py
3DPoliCompiler/commands/: dhmHolo  dhmInit
3DPoliCompiler/example/: FC0.PGM  dhmTest.txt  myholo-0271.zdc
DhmClient/: clean.py  pyproject.toml  setup.py
DhmClient/holoclient/: __init__.py  commands.py  dhmclient.py  exposure.py  holoclient.py  hologram.py  motorscan.py  rawholo.py  utils.py
DhmClient/test/: dhmtest.py  hologram.zdc  holotest.py
DhmServ/: App.config  Camera.cs  Commands.cs  DhmServ.csproj  Directory.Build.props  Microscope.cs  Program.cs  Results.cs  Server.cs
